apps/jotty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jotty
  namespace: jotty
  labels:
    app: jotty
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: jotty
