apps/jotty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jotty
  namespace: jotty
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: jotty.treympick.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jotty
            port:
              number: 80
  tls:
  - hosts:
    - jotty.treympick.me
    secretName: jotty-tls
